tests/sksl/errors/OpaqueTypeAssignment.glsl
### Compilation failed:

error: 2: global variable initializer must be a constant expression
error: 4: unknown identifier 'b'
2 errors
